# LearnTry

./: .gitignore  contributors.txt
arch/riscv-mubench/: .gitignore  README.md  build-all.sh  build-asm-all.sh  clean-all.sh  delete_all.sh  hello-world.c  ld_test_icache_conflit_miss.c  ld_test_icache_conflit_miss.ld  ld_test_icache_far_apart_indirect_jumps.c  ld_test_icache_far_apart_indirect_jumps.ld  rand_ten_thousand_indices_from_1to1000_array.h  simple_gem5_riscv_cpu.py  test_bp_alternate.c  test_bp_miss_pred_in_strong_taken.c  test_bp_perfect_prediction.c  test_bp_state_swing.c  test_btb_capacity_miss.c  test_btb_force_misspredict.c  test_icache_capacity_miss.c  test_icache_complusory_miss_all_lines.c  test_icache_stress_hits.c  thousand_functions.h  thousand_functions_array.h
cpp/: structGen.cpp
cpp/cpp_solid_principle_udemy/project/app/: CMakeLists.txt
cpp/cpp_solid_principle_udemy/project/app/configs/ut/: CMakeLists.txt
cpp/cpp_solid_principle_udemy/project/app/parsers/ut/: CMakeLists.txt
cpp/cpp_solid_principle_udemy/project/app/services/ut/: CMakeLists.txt
cpp/neural-sim/: CMakeLists.txt  Makefile  README  typescript
cpp/neural-sim/include/: abc.h  command_processor.h  comp_core.h  events.h  hw_module.hpp  packets.hpp  simpleExternalElement.h
cpp/neural-sim/scripts/: neural_processor.py  run.sh  sst-source-asd.sh
cpp/neural-sim/src/: CMakeLists.txt  command_processor.cc  command_processor.cpp  comp_core.cpp  myLibrary.cc  simpleExternalElement.cc
numpyScipy/: Matplotlib-createReport.ipynb  Numpy.ipynb  Scikit-Image.ipynb  fft.py
sqlite/examples-tutorialspoint-com/src/: CMakeLists.txt  createTable.cpp  openDB.cpp
viz/nicegui-tutorial/: main.py  pyproject.toml
viz/nicegui-tutorial/docker-controller/: core.py  docker_manager.py  execution_api.py  execution_engines.py  models.py  test_apis.py
viz/nicegui-tutorial/try/: app.py  chat_ui.py  config.toml  config_manager.py  content_manager.py  content_panel_ui.py  file_handlers.py  header_sidebar_ui.py  local_file_picker_ui.py  test_sse_client.py  ui_interface.py
viz/nicegui-tutorial/try/dummy_server/: sample_python.py  sample_reason.txt  sse_client.py  sse_server.py
viz/nicegui-tutorial/yt-tutorial/: 1-getting-started.py  11-input-element.py  18-file-upload.py  2-textelement.py  22-table-element.py  27-tree-element.py  3-button-and-badge.py  33-card-element.py  4-toggle-element.py  5-radio-element.py  6-select-element.py  7-checkbox.py  full-screen-scroll.py  myapp.spec
(+395 files in other folders)
